sonar requirements, 80% and more fixes