@@ -5,7 +5,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class DefaultCards {
@@ -16,7 +15,7 @@ public class DefaultCards {
     public List<Long> getDefaultCardIds() {
         return Arrays.stream(defaultCardIds.split(","))
                 .map(Long::parseLong)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
