@@ -20,7 +20,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -32,14 +31,12 @@ public class UserService {
     private CardRepository cardRepository;
     private PlayerRepository playerRepository;
     private AccessToken requestAccessToken;
-
+    static final String UNAUTHORISED_EXCEPTION_MESSAGE = "USER_ID_NOT_FROM_LOGGED_IN_USER";
     DefaultCards defaultCards;
 
     public Optional<User> getUser(Long id) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(id)) {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(id)) {
+            throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         return userRepo.findById(id).map(UserConverter::convert);
     }
@@ -49,7 +46,7 @@ public class UserService {
             throw new UnauthorizedDataAccessException("ADMIN_PERMISSION_MANDATORY");
         }
         return GetAllUsersResponse.builder()
-                .users(userRepo.findAll().stream().map(UserConverter::convert).collect(Collectors.toList())).build();
+                .users(userRepo.findAll().stream().map(UserConverter::convert).toList()).build();
     }
 
     @Transactional
@@ -70,14 +67,12 @@ public class UserService {
         if (userRepo.findByUsername(request.getUsername()) != null) {
             throw new UsernameAlreadyExistsException();
         }
-        UserEntity newAdminEntity = generateAdminEntity(request);
+        generateAdminEntity(request);
     }
 
     public void updateUser(UpdateUserRequest request) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(request.getId()))  {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(request.getId())) {
+            throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         UserEntity user = userRepo.findById(request.getId())
                 .orElseThrow(() -> new EntityNotFoundException("User not found for ID: " + request.getId()));
@@ -88,10 +83,8 @@ public class UserService {
     }
 
     public void deleteUser(Long id) {
-        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name())) {
-            if (!requestAccessToken.getUserId().equals(id)) {
-                throw new UnauthorizedDataAccessException("USER_ID_NOT_FROM_LOGGED_IN_USER");
-            }
+        if (!requestAccessToken.hasRole(RoleEnum.ADMIN.name()) && !requestAccessToken.getUserId().equals(id)) {
+                throw new UnauthorizedDataAccessException(UNAUTHORISED_EXCEPTION_MESSAGE);
         }
         userRepo.deleteById(id);
     }
@@ -101,12 +94,12 @@ public class UserService {
     private void saveNewPlayer(UserEntity user) {
 
         List<Long> defaultCardIds = defaultCards.getDefaultCardIds();
-        List<CardEntity> defaultCards = cardRepository.findAllById(defaultCardIds);
+        List<CardEntity> defaultCardsCollection = cardRepository.findAllById(defaultCardIds);
 
         PlayerEntity newPlayer = PlayerEntity.builder()
                 .name("player" + user.getId())
                 .user(user)
-                .ownedCards(defaultCards)
+                .ownedCards(defaultCardsCollection)
                 .deck(new DeckEntity())
                 .build();
         playerRepository.save(newPlayer);
