@@ -1,10 +1,7 @@
 package fontys.magiccardgame.business.converters;
 
-import fontys.magiccardgame.business.converters.CardConverter;
 import fontys.magiccardgame.domain.Deck;
 import fontys.magiccardgame.persistence.entity.DeckEntity;
-
-import java.util.stream.Collectors;
 
 public final class DeckConverter {
     private DeckConverter(){}
@@ -12,7 +9,7 @@ public final class DeckConverter {
         return Deck.builder()
                 .id(entity.getId())
                 .playerId(entity.getPlayer().getId())
-                .cards(entity.getCards().stream().map(CardConverter::convert).collect(Collectors.toList()))
+                .cards(entity.getCards().stream().map(CardConverter::convert).toList())
                 .build();
     }
 }
