@@ -3,15 +3,13 @@ package fontys.magiccardgame.business.converters;
 import fontys.magiccardgame.domain.Player;
 import fontys.magiccardgame.persistence.entity.PlayerEntity;
 
-import java.util.stream.Collectors;
-
 public final class PlayerConverter {
     private PlayerConverter(){}
     public static Player convert(PlayerEntity entity){
         return Player.builder()
                 .id(entity.getId())
                 .name(entity.getName())
-                .ownedCards(entity.getOwnedCards().stream().map(CardConverter::convert).collect(Collectors.toList()))
+                .ownedCards(entity.getOwnedCards().stream().map(CardConverter::convert).toList())
                 .deck(DeckConverter.convert(entity.getDeck()))
                 .userId(entity.getUser().getId())
                 .build();
